--- a/david/mystyle.css
+++ b/david/mystyle.css
@@ -1,30 +1,94 @@
+section{
+    
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    color: aliceblue;
+}
+
 h1{
+
     text-align:center;
     justify-content: space-between ;
 }
 h2{
+
     text-align:center;
     justify-content: space-between ;
 }
 p{
+
     text-align:center;
     justify-content: space-between ;
 }
 h3{
+
     text-align: center;
     justify-content: space-between;
 }
-#carlao{
-    text-decoration: none;
-    color:transparent;
-}
+
 #navbar{
-    background-color: rgb(140, 12, 179);
+    
+    box-shadow: 0px 5px 50px #000000 ;
+    display: flex;
+    background-color: rgb(228, 200, 148);
+    width: 100%;
+    height: 100px;
+
     
 }
 body {
-    background-color: rgb(71, 56, 211);
+
+    background-color: rgb(35, 85, 148);
 }
+
+ul{
+    
+
+    display: flex;
+    width: 100%;
+
+}
+
+.navbar1{
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width : 20%;
+    height: auto; 
+
+}
+.navbar1 img{
+    
+    width: auto;
+    height: 100px;
+}
+
+.navbar2{
+
+    color: white;
+    display: flex;
+    width: 79%;
+    height: auto;
+    justify-content: flex-end;
+    align-items: center;
+    align-content: center;
+
+
+}
+
+li{
+   
+    text-decoration: none;
+    list-style-type: none;
+    width: 10%;
+    
+}
+
 
 
 
