--- a/david/mystyle.css
+++ b/david/mystyle.css
@@ -17,6 +17,13 @@ section2{
     color: aliceblue;
 }
 
+section3{
+    width: 100%;
+    height: 100vh;
+
+    color: aliceblue;
+}
+
 
 h1{
 
@@ -32,11 +39,6 @@ p{
 
     text-align:center;
     justify-content: space-between ;
-}
-#price{
-
-    text-align: center;
-    justify-content: space-between;
 }
 
 #navbar{
@@ -62,7 +64,7 @@ ul{
 
 }
 
-.navbar1{
+#navbar1{
 
     display: flex;
     justify-content: center;
@@ -71,7 +73,7 @@ ul{
     height: auto; 
 
 }
-.navbar1 img{
+#navbar1 img{
     
     width: auto;
     height: 100px;
@@ -96,6 +98,11 @@ li{
     list-style-type: none;
     width: 10%;
     
+}
+a{
+
+    text-decoration: none;
+    color: #000000;
 }
 
 
